@@ -1,0 +1,6 @@
+if __name__ == '__main__':
+    import sys, py
+    sys.exit(py.test.cmdline.main())
+
+# for more API entry points see the 'tests' definition
+# in __init__.py
